--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -9,6 +9,7 @@
 			<link rel="stylesheet" href="{% static "css/base.css" %}" />
 			<!-- JavaScript -->
 			<script src="{% static "js/jquery.js" %}"></script>
+			<a href="/rango/about">About</a>
 		</head>
 		
 		<body>
