--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
 {% load staticfiles %}
+<html>
+<head>
+	<title>Rango</title>
+</head>
 
-	<html>
-		
-		<head>
-			<title>Rango</title>
-			<!-- CSS -->
-			<link rel="stylesheet" href="{% static "css/base.css" %}" />
-			<!-- JavaScript -->
-			<script src="{% static "js/jquery.js" %}"></script>
-			<a href="/rango/about">About</a>
-		</head>
-		
-		<body>
-			<!-- Image -->
-			<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
-		</body>
+<body>
+	<h1>Rango says...</h1>
+	
+	<div>hey there partner!</div>
+	<div>
+	<h2> Most Liked Categories </h2>
+	{% if categories %}
 
-	</html>
+	<ul>
+		{% for category in categories %}
+		<!-- Following line changed to add an HTML hyperlink -->
+		<li>
+		<a href="/rango/category/{{ category.slug }}">{{ category.name }}</a>
+		</li>
+		{% endfor %}
+	</ul>
+	
+	{% else %}
+		<strong>There are no categories present.</strong>
+	{% endif %}
+	</div>
+
+
+
+	<h2> Most Viewed Pages</h2>
+	{% if mostViewed%}
+
+	<ul>
+		{% for category in mostViewed%}
+		<!-- Following line changed to add an HTML hyperlink -->
+		<li>
+		<a href="/rango/category/{{ pages.slug }}">{{ mostViewed.name }}</a>
+		</li>
+		{% endfor %}
+	</ul>
+	
+	{% else %}
+		<strong>There are no categories present.</strong>
+	{% endif %}
+	</div>
+
+	<div>
+		<a href="/rango/about/">About Rango</a><br />
+		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+	</div>
+</body>
+</html>
