--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -8,9 +8,9 @@
 	<p> this tutorial has been put together by Gregor kerr </p>
 	<p>visits: {{ visits }}</p>
 	
+	
 
-	<img src="{{ MEDIA_URL}}cat.jpg" alt ="Picture of cat" />
-
+	<img src="{% static "images/cat.jpg" %}" alt="Picture of Cat" />
 {% endblock %}
 	
 	
