--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Rango</title>
-	</head>
+{% extends 'rango/base.html' %}
+	
+	{% block body_block %}
 
-	<body>
+	
 		<h1>Add a Category</h1>
 		<div>
 			<form id="category_form" method="post" action="/rango/add_category/">
@@ -17,8 +15,7 @@
 					{{ field.help_text }}
 					{{ field }}
 				{% endfor %}
-			<input type="submit" name="submit" value="Create Category" />
-		</form>
-	</div>
-</body>
-</html>
+				<input type="submit" name="submit" value="Create Category" />
+			</form>
+		</div>
+	{% endblock %}
