--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+{% load staticfiles %}
 {% load rango_template_tags %}
+	
+<html>
 	<head>
 		<title>
 			Rango -
@@ -22,11 +24,12 @@
 			{% if user.is_authenticated %}
 				<li><a href="{% url 'restricted' %}">Restricted Page</a></li>
 				<li><a href="{% url 'logout' %}">Logout</a></li>
+				<li><a href="{% url 'add_category' %}">Add a New Category</a></li>
 			{% else %}
 				<li><a href="{% url 'login' %}">Sign In</a></li>
 				<li><a href="{% url 'register' %}">Sign Up</a></li>
 			{% endif %}
-				<li><a href="{% url 'add_category' %}">Add a New Category</a></li>
+				
 				<li><a href="{% url 'about' %}">About</a></li>
 				<li><a href="{% url 'index' %}">Index</a></li>
 			</ul>	
@@ -37,8 +40,6 @@
 			{% block sidebar_block %}
 				{% get_category_list %}
 			{% endblock %}
-		</div>
-	
-		
+		</div>
 	</body>
 </html>
