--- a/templates/rango/cats.html
+++ b/templates/rango/cats.html
@@ -2,13 +2,14 @@
 	{% if c == act_cat %}
 		<li>
 		<strong>
-			<a href="{% url 'show_category' c.slug %}">{{ c.name }}</a>
+			<a href="{% url 'rango:show_category' c.slug %}">{{ c.name }}</a>
 		</strong>
 		</li>
 	{% else %}
 		<li>
 			<a href="{% url 'rango:show_category' c.slug %}">{{ c.name }}</a>
 		</li>
+		
 	{% endif %}
 {% endfor %}
 
